--- a/package.json
+++ b/package.json
@@ -5,22 +5,27 @@
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "ios": "expo start --ios"
   },
   "dependencies": {
     "expo": "~47.0.8",
+    "expo-gl": "~12.0.0",
     "expo-status-bar": "~1.4.2",
+    "expo-three": "^7.0.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-web": "~0.18.9"
+    "three": "~0.145.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "@types/three": "^0.146.0",
     "typescript": "^4.6.3"
+  },
+  "exclusions": {
+    "@expo/browser-polyfill": "1.0.0"
   },
   "private": true
 }
